--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,13 +14,19 @@ django-templated-mail==1.1.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
+drf-extra-fields==3.4.0
+flake8==4.0.1
 idna==3.3
+isort==5.10.1
 itypes==1.2.0
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+mccabe==0.6.1
 oauthlib==3.2.0
 Pillow==9.1.1
+pycodestyle==2.8.0
 pycparser==2.21
+pyflakes==2.4.0
 PyJWT==2.4.0
 python3-openid==3.2.0
 pytz==2022.1
@@ -32,4 +38,3 @@ social-auth-core==4.2.0
 sqlparse==0.4.2
 uritemplate==4.1.1
 urllib3==1.26.9
-drf-extra-fields==3.4.0
