--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -4,6 +4,9 @@ server {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+    location /api/ {
+        try_files $uri @proxy_api;
+    }
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
