--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,11 +1,32 @@
 version: '3.3'
 services:
+
+  db:
+    image: postgres:14.0-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    env_file:
+      - ./.env
+  backend:
+    build:
+      context: ../backend
+      dockerfile: Dockerfile
+    env_file:
+      - ./.env
+    volumes:
+      - static_value:/backend/static/
+      - media_value:/backend/media/
+    restart: always
+    depends_on:
+      - db
   frontend:
     build:
       context: ../frontend
       dockerfile: Dockerfile
     volumes:
       - ../frontend/:/app/result_build/
+    depends_on:
+      - backend
   nginx:
     image: nginx:1.19.3
     ports:
@@ -19,26 +40,8 @@ services:
     depends_on:
       - backend
       - frontend
-  db:
-    image: postgres:13.0-alpine
-    volumes:
-      - /var/lib/postgresql/data/
-    env_file:
-      - ./.env
-    ports:
-      - "5432:5432"
-
-  backend:
-    image: pkrfc/foodgram:v1
-    env_file:
-      - ./.env
-    volumes:
-      - static_value:/app/static/
-      - media_value:/app/media/
-    restart: always
-    depends_on:
-      - db
 
 volumes:
+  postgres_data:
   static_value:
   media_value:
