--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -4,8 +4,11 @@ server {
     location /media/ {
         root /var/html/;
     }
-
     location /static/admin/ {
+        root /var/html/;
+    }
+
+    location /static/rest-framework/ {
         root /var/html/;
     }
     location /api/docs/ {
