--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,8 +65,8 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:v1
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:v1
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:v1
             sudo docker-compose stop
             sudo docker-compose rm web
             touch .env
@@ -81,3 +81,14 @@ jobs:
             sudo docker-compose exec -T web python3 manage.py makemigrations
             sudo docker-compose exec -T web python3 manage.py migrate
             sudo docker-compose exec -T web python3 manage.py collectstatic --no-input
+
+  send_message:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - name: send message
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_TO }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: ${{ github.workflow }} успешно выполнен!
