--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,8 +65,8 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:v1
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:v1
+            sudo docker pull pkrfc/foodgram_backend:v1
+            sudo docker pull pkrfc/foodgram_frontend:v1
             sudo docker-compose stop
             sudo docker-compose rm web
             touch .env
