--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,10 +65,10 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
-            sudo docker pull pkrfc/foodgram_backend:v1
-            sudo docker pull pkrfc/foodgram_frontend:v1
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:v1
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:v1
             sudo docker-compose stop
-            sudo docker-compose rm web
+            sudo docker-compose rm backend
             touch .env
             echo ALLOWED_HOSTS=${{ secrets.ALLOWED_HOSTS }} >> .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
