--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,9 +78,9 @@ jobs:
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
             sudo docker-compose up -d
-            sudo docker-compose exec -T web python3 manage.py makemigrations
-            sudo docker-compose exec -T web python3 manage.py migrate
-            sudo docker-compose exec -T web python3 manage.py collectstatic --no-input
+            sudo docker-compose exec -T backend python3 manage.py makemigrations
+            sudo docker-compose exec -T backend python3 manage.py migrate
+            sudo docker-compose exec -T backend python3 manage.py collectstatic --no-input
 
   send_message:
     runs-on: ubuntu-latest
