--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,14 +1,11 @@
 server {
     listen 80;
+    server_tokens off;
 
     location /media/ {
         root /var/html/;
     }
     location /static/admin/ {
-        root /var/html/;
-    }
-
-    location /static/rest-framework/ {
         root /var/html/;
     }
     location /api/docs/ {
