--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -8,6 +8,10 @@ server {
     location /static/admin/ {
         root /var/html/;
     }
+
+    location /static/rest-framework/ {
+        root /var/html/;
+    }
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
